<resources>
    <string name="app_name">Quiz App</string>
    <string name="name_hint">e.g. John</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="welcome">Welcome</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="start">START</string>
    <string name="image">Image</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">FINISH</string>
    <string name="go_to_next_question">GO TO NEXT QUESTION</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="you_scored_out_of">You scored <b>%1$s</b> out of <b>%2$s</b></string>
    <string name="no_image">No Image</string>
</resources>