<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_result"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_marginTop="50dp"
        android:textColor="@color/text_primary"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hey_congratulations"
        android:textSize="25sp"
        android:textColor="@color/text_primary"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUsername"
        android:layout_marginTop="25dp"
        android:textColor="@color/text_primary"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="User Name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_secondary"
        android:textSize="20sp"
        tools:text="You scored 9 out of 9"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFinish"
        android:text="@string/finish"
        android:textAlignment="center"
        android:textColor="@color/button_text"
        android:backgroundTint="@color/button_bg"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:layout_margin="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="26dp"
        />

</LinearLayout>